--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         function formatPublicKey() {
             const input = document.getElementById('publicKey').value;
             const formatted = input.replace(/(-----BEGIN PGP PUBLIC KEY BLOCK-----)([\s\S]*)(-----END PGP PUBLIC KEY BLOCK-----)/, (match, p1, p2, p3) => {
-                return p1 + '\r\n' + p2.trim().replace(/\s+/g, '\r\n') + '\r\n' + p3;
+                return p1 + '\r\n\r\n' + p2.trim().replace(/\s+/g, '\r\n') + '\r\n' + p3;
             });
             document.getElementById('formattedKey').value = formatted;
         }
