--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/openpgp/5.0.0-4/openpgp.min.js"></script>
 </head>
 <body>
-    <h1>PGP Public Key/Message Formatter and Encryptor for iOS Firefox</h1>
+    <h1>PGP Public Key/Message Formatter and Encryptor</h1>
     <label for="publicKey">Enter your public key/message:</label>
     <textarea id="publicKey" placeholder="Paste your public key here..."></textarea>
     <button onclick="formatPublicKey()">Format Public Key/Message</button>
